<resources>
    <string name="app_name">My Application</string>
    <string name="label_new_member">NEW MEMBER</string>
    <string name="label_personal_details">Personal Details</string>
    <string name="label_refferal_code">Refferal Code</string>
    <string name="label_first_name">* First Name</string>
    <string name="label_last_name">* Last Nmae</string>
    <string name="label_email">* Email</string>
    <string name="label_phone">* Phone</string>
    <string name="label_confirm_password">* Confirm Password</string>
    <string name="label_password">* Password</string>
    <string name="label_photo">* Photo</string>
    <string name="label_browse">BROWSE</string>
    <string name="label_driving_license_number">* Driving License Number</string>
    <string name="label_aadhar_number">* Aadhar Number</string>
    <string name="label_pan_number">* PAN Card</string>
    <string name="label_bank_details">Bank details</string>
    <string name="label_btn_rgstr">REGISTER</string>
    <string name="label_cancel">CANCEL</string>
    <string name="label_ifsc_code">* IFSC Code</string>
    <string name="label_branch">* Branch</string>
    <string name="label_bank_name">* Bank Name</string>
    <string name="label_account_number">* Account Number</string>
    <string name="label_user_name_passbook">* Name(as on passbook)</string>
    <string name="label_personal_identity_details">Personal Identity Details</string>
    <string name="label_name">* name</string>
    <string name="login">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="hint_phone_text">phone</string>
    <string name="hint_password_text">password</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="img">img</string>
    <string name="new_member">New Member?</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>
