<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="signUpModel"
            type="com.apollo.myapplication.model.SignUpModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_delivery_boy">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/new_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dimen30dp"
                android:layout_marginEnd="0dp"
                android:text="@string/label_new_member"
                android:textColor="@color/ms_white"
                android:textStyle="bold"
                android:textSize="@dimen/dimen20sp"/>
            <TextView
                android:id="@+id/personal_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_personal_details"
                android:textColor="@color/ms_white"
                android:textSize="@dimen/dimen18sp"
                android:layout_marginStart="@dimen/dimen10dp"
                android:layout_marginTop="@dimen/dimen10dp"/>
            <EditText
                android:id="@+id/refferal_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{signUpModel.refferalCode}"
                android:textColorHint="@color/ms_white"
                android:hint="@string/label_refferal_code"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/ms_white"
                android:text="@{signUpModel.firstName}"
                android:textColorHint="@color/ms_white"
                android:hint="@string/label_first_name"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/ms_white"
                android:hint="@string/label_last_name"
                android:text="@{signUpModel.lastName}"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:text="@{signUpModel.email}"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_phone"
                android:text="@{signUpModel.phone}"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:text="@{signUpModel.password}"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@{signUpModel.confirmPassword}"
                android:hint="@string/label_confirm_password"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
           <androidx.appcompat.widget.AppCompatSpinner
               android:id="@+id/select_state"
               style="@style/spinner_style"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:paddingStart="@dimen/dimen20dp"
               android:paddingEnd="@dimen/dimen20dp"
               android:spinnerMode="dialog"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/select_city"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"
                android:spinnerMode="dialog"/>
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/select_region"
                style="@style/spinner_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"
                android:spinnerMode="dialog"/>
            <TextView
                android:id="@+id/personal_identity_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_personal_identity_details"
                android:textColor="@color/ms_white"
                android:textSize="@dimen/dimen18sp"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_photo"
                android:textColor="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"
                android:layout_marginTop="@dimen/dimen10dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Browse"
                    android:layout_marginLeft="@dimen/dimen20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
            <EditText
                android:id="@+id/diving_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/label_driving_license_number"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Browse"
                    android:layout_marginLeft="@dimen/dimen20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <EditText
                android:id="@+id/aadhar_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_aadhar_number"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Browse"
                    android:layout_marginLeft="@dimen/dimen20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <EditText
                android:id="@+id/pan_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_pan_number"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Browse"
                    android:layout_marginLeft="@dimen/dimen20dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/bank_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_bank_details"
                android:textColor="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_name"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/account_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_account_number"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/bank_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_bank_name"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/branch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_branch"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <EditText
                android:id="@+id/ifsc_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_ifsc_code"
                android:textColorHint="@color/ms_white"
                android:paddingStart="@dimen/dimen20dp"
                android:paddingEnd="@dimen/dimen20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="@dimen/dimen150dp"
                    android:layout_height="@dimen/dimen100dp"
                    android:text="@string/label_cancel"/>

                <Button
                    android:layout_width="@dimen/dimen150dp"
                    android:layout_height="@dimen/dimen100dp"
                    android:layout_marginStart="@dimen/dimen45dp"
                    android:text="@string/label_btn_rgstr"/>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</layout>