<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="handlers"
        type="com.teka.myapplication.listeners_login.CallBack" />
    <variable
        name="login"
        type="com.teka.myapplication.login.LoginModel" >
    </variable>

</data>

    <LinearLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/bg_delivery_boy">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.13"
            android:layout_marginTop="@dimen/d_60dp"
            android:gravity="center">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/teka_logo" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d_30dp"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/login_txt"
            android:textSize="@dimen/s_20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:orientation="vertical">

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_40dp"
                android:layout_marginTop="@dimen/d_30dp"
                android:layout_marginRight="@dimen/d_40dp"
                android:backgroundTint="@color/login_light_gray"
                android:gravity="center"
                android:hint="@string/phone"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:imeOptions="actionNext"
                android:textColor="@color/login_light_gray"
                android:textColorHint="@color/login_light_gray"
                app:met_baseColor="@color/colorWhite"
                app:met_errorColor="@color/error_color"
                android:textSize="@dimen/s_15sp"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_phone_text"
                app:met_primaryColor="@color/login_light_gray"
                app:met_textColorHint="@color/login_light_gray"
                app:met_underlineColor="@color/login_edit_txt_underline" />

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_40dp"
                android:layout_marginTop="@dimen/d_30dp"
                android:layout_marginRight="@dimen/d_40dp"
                android:backgroundTint="@color/login_light_gray"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textSize="@dimen/s_15sp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/login_light_gray"
                app:met_baseColor="@color/colorWhite"
                app:met_errorColor="@color/error_color"
                app:met_floatingLabel="highlight"
                app:met_floatingLabelText="@string/hint_password_text"
                app:met_primaryColor="@color/login_light_gray"
                app:met_textColorHint="@color/login_light_gray"
                app:met_underlineColor="@color/login_edit_txt_underline" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_40dp"
                android:layout_marginTop="@dimen/d_40dp"
                android:layout_marginRight="@dimen/d_40dp"
                android:background="@color/login_red"
                android:text="@string/submit"
                android:onClick="@{()-> handlers.onSubmitClick()}"
                android:textStyle="bold"
                android:textSize="@dimen/s_16sp"
                android:textColor="@color/login_submit_txt" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/d_40dp"
                android:layout_marginTop="@dimen/d_30dp"
                android:layout_marginRight="@dimen/d_40dp"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/forgot_pw"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingBottom="@dimen/d_5dp"
                    android:onClick="@{()-> handlers.onForgotPasswordClick()}"
                    android:paddingTop="@dimen/d_5dp"
                    android:text="Forgot Password?"
                    android:textColor="@color/login_forgot_pass_txt" />

                <TextView
                    android:id="@+id/new_member"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:onClick="@{()-> handlers.onNewMemberClick()}"
                    android:paddingBottom="@dimen/d_5dp"
                    android:paddingTop="@dimen/d_5dp"
                    android:gravity="end"
                    android:text="New Member?"
                    android:textColor="@color/login_forgot_pass_txt" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
